# api-gateway

./: pyproject.toml
api_gateway/: app.py
api_gateway/infrastructure/auth0/: auth0_client.py  auth0_token_payload.py  auth0_user_info.py  exceptions.py
api_gateway/infrastructure/rabbit_mq/: rabbit_mq_publisher.py
api_gateway/infrastructure/s3/: s3_uploader.py
api_gateway/setup_utils/: auth0.py  origins.py  rabbit_mq.py  s3.py
api_gateway/utility/: file_to_dataframe.py
api_gateway/utility/file_type/: determine_file_type.py  exceptions.py  file_type.py
